# ares-webos-sdk

./: .gitignore  .gitmodules  DEMO.md  README-SDK.md  README.md  SSH-KEY-SETUP.md  ares-deploy.sh  ares-generate.sh  ares-ide.sh  ares-install.bat  ares-launch.sh  ares-package.sh  ide-plugin.json  ide-plugin.json.orig  ide.json  ide.sample.json  npm-shrinkwrap.json  package.json  palm-generate.js  palm-package.js
ares/client/: AresProperties.js  OpenWebosBuild.js  TargetConfiguration.js  WebosBuild.js  WebosProjectProperties.js  package.js  webOS.less
ares/server/: bdWebos.js  bdWebosBase.js  main.js
lib/: ApplicationDescription.schema  NovacomDevices.schema  ares-generate.js  ares-install.js  ares-launch.js  ares-package.js  ares.html  cli-appdata.js  cli-control.js  com.sdk.ares.hostedapp.ipk  config.json  consoleSync.js  copyFile.js  eof.js  error-handler.js  gdbserver.js  generator.js  helpFormat.js  inspector.js  installer.js  ipkg-tools.js  launcher.js  log-config.json  luna.js  main.js  novacom-devices.json  novacom.js  packager.js  sdkenv.js  setup-device.js  tar-filter-pack.js  unload_func.js  utility.js  version-tools.js
scripts/: install-script.js  sub-npm.js
source/: OpenWebosBuild.js
templates/: project-templates.json
templates/bootplate-web/: index.html
templates/enyoappinfo/: appinfo.json
templates/native-service/: CMakeLists.txt  README  services.json  toolchain.cmake
templates/native-service/include/: sample.h
templates/native-service/src/: main.c
templates/native/2DGames/: CMakeLists.txt  README
templates/native/2DGames/include/: Base.h
templates/native/2DGames/src/: Base.cpp  Main.cpp
templates/native/3DGames/: CMakeLists.txt  README
templates/native/3DGames/include/: Base.h
templates/native/3DGames/src/: Base.cpp  Main.cpp
templates/native/EmptyApp/: CMakeLists.txt  README
templates/native/EmptyApp/src/: Main.cpp
templates/native/GraphicsApp/: CMakeLists.txt  README
templates/native/GraphicsApp/src/: Main.cpp
templates/native/MediaApp/: CMakeLists.txt  README
templates/native/MediaApp/src/: Main.cpp
templates/native/OpenGLESv1.1Project/: CMakeLists.txt  README
templates/native/OpenGLESv1.1Project/src/: Main.cpp
templates/native/OpenGLESv2.0Project/: CMakeLists.txt  README
templates/native/OpenGLESv2.0Project/src/: Main.cpp
templates/nativeappinfo/: appinfo.json
templates/webappinfo/: appinfo.json
templates/webos-service/: helloclient.js  helloworld_webos_service.js  package.json  services.json
test/: luna.spec.js  novacom.spec.js  sdk.spec.js
